--- a/vista/styles/login.css
+++ b/vista/styles/login.css
@@ -48,6 +48,7 @@ body{
 }
 
 .labelForInputEmail{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-bottom: 5px;
     font-size: 20px;
 }
@@ -65,6 +66,7 @@ body{
 }
 
 .labelForInputPassword{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-bottom: 5px;
     font-size: 20px;
 }
@@ -74,12 +76,28 @@ body{
     width: 250px;
     height: 30px;
     padding: 5px 20px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     border: 1px solid #dbdbdb;
     border-radius: 4px;
     outline: none;
     font-size: 16px;
 }
+
+.containerInputAndButton a{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 30px;
+}
+
+.containerLogin a:hover{
+    text-decoration:underline;
+}
+
+.containerLogin a{
+    font-size: 16px;
+    color: #000000;
+    text-decoration:none;
+}
+
 
 #buttonLogIn{
     background-color: #ffe000;
@@ -91,14 +109,17 @@ body{
     font-size: 20px; 
 }
 
-.containerLogin a:hover{
-    text-decoration:underline;
+#loginGoogle{
+    width: 290px;
+    height: 40px;
+    border:0.5px black solid;
+    border-radius: 4px;
+    font-size: 20px; 
+    background-color: #ffffff;
 }
 
-.containerLogin a{
-    font-size: 16px;
-    color: #000000;
-    text-decoration:none;
+.containerInputAndButton p{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 form{
