--- a/vista/styles/registro.css
+++ b/vista/styles/registro.css
@@ -1,8 +1,11 @@
 body{
+    width: 100%;
+    height: 100%;
+    position: fixed;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0;
 }
 
 .containerPrincipal{
