--- a/vista/styles/preferenciasGeneros.css
+++ b/vista/styles/preferenciasGeneros.css
@@ -19,13 +19,19 @@ body{
     font-size: 40px;
 }
 
+.containerTitulosInputs, .containerTitulos{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 p, h1{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1{
     font-size: 40px;
-    margin-left: 20px;
 }
 
 div p{
@@ -35,8 +41,9 @@ div p{
 
 form{
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    margin-left: 20px;
+    align-items: center;
 }
 
 form p{
@@ -47,6 +54,7 @@ form p{
 form div{
     display: flex;
     flex-wrap: wrap;
+    width: fit-content;
 }
 
 input{
@@ -57,10 +65,18 @@ input{
     background-color: #ffe000;
     width: 125px;
     height: 40px;
-    margin-top: 40px;
-    margin-left:20px;
     border:0.5px black solid;
     border-radius: 4px;
     font-size: 20px; 
 }
 
+#buttonOmitir{
+    background-color: #ffff;
+    width: 125px;
+    height: 40px;
+    margin-top:40px;
+    margin-left:20px;
+    border:0.5px black solid;
+    border-radius: 4px;
+    font-size: 20px;    
+}
