--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -215,6 +215,109 @@ nav ul a{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.pop-up {
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pop-up-wrap {
+    background-color: #ffffff;
+    color: #eeeeee;
+    display: inline;
+    width: 600px;
+    height: 500px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.containerTituloyBotonCerrar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0px;
+}
+
+.containerTituloyBotonCerrar p{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    margin-left: 185px;
+    margin-right: 130px;
+}
+
+.containerTituloyBotonCerrar #buttonCerrarModal{
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border-radius: 40px;
+    border: none;
+}
+
+form{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+form div{
+    margin-bottom: 30px;
+}
+
+form #inputTituloPost{
+    height: 36px;
+    width: 250px;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border: 1px solid #dbdbdb;
+    border-radius: 5px;
+    outline: none;
+    padding-left: 10px;
+}
+
+form #selectCategoriaPost{
+    height: 40px;
+    width: 250px;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border: 1px solid #dbdbdb;
+    border-radius: 5px;
+    outline: none;
+}
+
+form #inputContenidoPost{
+    background-color: transparent;
+    resize: none;
+    height: 200px;
+    width: 500px;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    outline: none;
+    border: 1px solid #dbdbdb;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    padding: 10px;
+}
+
+form #buttonPublicarPost{
+    background-color: #ffe000;
+    width: 150px;
+    height: 40px;
+    border:0.5px black solid;
+    border-radius: 4px;
+    font-size: 20px; 
+}
+
 .menuTema{
     width: 85px;
     height: 80%;
