--- a/vista/styles/preferenciasGeneros.css
+++ b/vista/styles/preferenciasGeneros.css
@@ -1,15 +1,26 @@
 body{
-    margin: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.containerPrincipal{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #dbdbdb;
+    border-radius: 10px;
+    width: 600px;
 }
 
 .containerPrincipal .containerLogo{
     display: flex;
     align-items: center;
-    padding-left: 20px;
-    border-bottom: 2px #dbdbdb solid;
-    height: 75px;
+    margin-left: -10px;
 }
  
 .containerPrincipal .containerLogo p{
@@ -31,10 +42,12 @@ p, h1{
 }
 
 h1{
+    margin-top: -15px;
     font-size: 40px;
 }
 
-div p{
+.containerTitulos p{
+    margin-top: -10px;
     font-size: 20px;
     margin-left: 20px;
 }
@@ -44,6 +57,7 @@ form{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-top: 10px;
 }
 
 form p{
@@ -75,7 +89,7 @@ input{
     width: 125px;
     height: 40px;
     margin-top:40px;
-    margin-left:20px;
+    margin-bottom: 50px;
     border:0.5px black solid;
     border-radius: 4px;
     font-size: 20px;    
