--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -103,7 +103,7 @@ nav ul li{
     align-items: center;
 }
 
-nav ul a:hover{
+nav ul button:hover{
     background-color: var(--bg-color);
     border-radius: 40px;
 }
@@ -112,19 +112,20 @@ nav ul li img{
     margin-right: 20px;
 }
 
-nav ul a li{
+nav ul button li{
     margin-left: 40px;
 }
 
-nav ul a{
+nav ul button{
     width: 100%;
     font-size: 23px;
     font-family: 'Mitr', sans-serif;
     color: var(--text-color);
-    text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: transparent;
+    border: none;
 }
 
 .containerPrincipal{
@@ -263,18 +264,18 @@ nav ul a{
     border: none;
 }
 
-form{
+#datosPost{
     display: flex;
     align-items: center;
     flex-direction: column;
     margin-top: 10px;
 }
 
-form div{
+#datosPost div{
     margin-bottom: 30px;
 }
 
-form #inputTituloPost{
+#datosPost #inputTituloPost{
     height: 36px;
     width: 250px;
     font-size: 20px;
@@ -285,7 +286,7 @@ form #inputTituloPost{
     padding-left: 10px;
 }
 
-form #selectCategoriaPost{
+#datosPost #selectCategoriaPost{
     height: 40px;
     width: 250px;
     font-size: 20px;
@@ -295,7 +296,7 @@ form #selectCategoriaPost{
     outline: none;
 }
 
-form #inputContenidoPost{
+#datosPost #inputContenidoPost{
     background-color: transparent;
     resize: none;
     height: 200px;
@@ -309,7 +310,7 @@ form #inputContenidoPost{
     padding: 10px;
 }
 
-form #buttonPublicarPost{
+#datosPost #buttonPublicarPost{
     background-color: #ffe000;
     width: 150px;
     height: 40px;
