--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -106,6 +106,7 @@ nav ul li{
 nav ul button:hover{
     background-color: var(--bg-color);
     border-radius: 40px;
+    cursor: pointer;
 }
 
 nav ul li img{
@@ -181,8 +182,14 @@ nav ul button{
 
 .containerContent .post{
     background-color: var(--primary-color);
-    padding: 35px;
+    padding: 1px 20px 20px 20px;
     margin-bottom: 2px;
+}
+
+.containerContent .post h3{
+    margin-top: 5px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 35px;
 }
 
 .containerContent h1{
@@ -227,6 +234,7 @@ nav ul button{
     display: flex;
     justify-content: center;
     align-items: center;
+    visibility: hidden;
 }
 
 .pop-up-wrap {
