--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -144,7 +144,7 @@ nav ul button{
 .containerContent .containerInputPost .containerInputAndImageProfile{
     display: flex;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 0px;
     height: 70px;
 }
 
@@ -178,6 +178,7 @@ nav ul button{
 .containerContent{
     align-items: flex-start;
     width: 69%;
+    min-width: 450px;
 }
 
 .containerContent .post{
@@ -186,10 +187,24 @@ nav ul button{
     margin-bottom: 2px;
 }
 
+.containerContent .post .ContainerPicturesNameUser{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.post .ContainerPicturesNameUser p{
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 15px;
+    font-weight: bold;
+}
+
 .containerContent .post h3{
     margin-top: 5px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 35px;
+    font-size: 30px;
 }
 
 .containerContent h1{
@@ -203,6 +218,44 @@ nav ul button{
     display: flex;
     flex-wrap: wrap;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    word-break: break-all;
+    margin-top: -20px;
+}
+
+.post .containerReactionComment{
+    margin-top: 20px;
+    /*border: 2px solid #dbdbdb;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 20px;
+    padding-right: 20px;
+
+}
+
+.containerLike p, .containerComment p, .containerDislike p{
+    font-size: 17px;
+    margin-left: 5px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#buttonLike, #buttonDislike, #buttonComment{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px 20px 0px 20px;
+    border-radius: 20px;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+}
+
+#buttonLike:hover, #buttonDislike:hover, #buttonComment:hover{
+    background-color: #eeeeee;
+}
+
+#buttonLike, #buttonDislike{
+    margin-right: 25px;
 }
 
 .containerTrendings{
