--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -144,7 +144,7 @@ nav ul button{
 .containerContent .containerInputPost .containerInputAndImageProfile{
     display: flex;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 0px;
     height: 70px;
 }
 
@@ -178,6 +178,7 @@ nav ul button{
 .containerContent{
     align-items: flex-start;
     width: 69%;
+    min-width: 450px;
 }
 
 .containerContent .post{
@@ -186,10 +187,24 @@ nav ul button{
     margin-bottom: 2px;
 }
 
+.containerContent .post .ContainerPicturesNameUser{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.post .ContainerPicturesNameUser p{
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 15px;
+    font-weight: bold;
+}
+
 .containerContent .post h3{
     margin-top: 5px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 35px;
+    font-size: 30px;
 }
 
 .containerContent h1{
@@ -203,6 +218,44 @@ nav ul button{
     display: flex;
     flex-wrap: wrap;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    word-break: break-all;
+    margin-top: -20px;
+}
+
+.post .containerReactionComment{
+    margin-top: 20px;
+    /*border: 2px solid #dbdbdb;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 20px;
+    padding-right: 20px;
+
+}
+
+.containerLike p, .containerComment p, .containerDislike p{
+    font-size: 17px;
+    margin-left: 5px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#buttonLike, #buttonDislike, #buttonComment{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px 20px 0px 20px;
+    border-radius: 20px;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+}
+
+#buttonLike:hover, #buttonDislike:hover, #buttonComment:hover{
+    background-color: #eeeeee;
+}
+
+#buttonLike, #buttonDislike{
+    margin-right: 25px;
 }
 
 .containerTrendings{
@@ -238,14 +291,15 @@ nav ul button{
 }
 
 .pop-up-wrap {
-    background-color: #ffffff;
-    color: #eeeeee;
+    background-color: var(--primary-color);;
+    color: var(--text-color);
     display: inline;
     width: 600px;
     height: 500px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    border: 1px #ffffff solid;
 }
 
 .containerTituloyBotonCerrar{
@@ -292,6 +346,8 @@ nav ul button{
     border-radius: 5px;
     outline: none;
     padding-left: 10px;
+    background-color: transparent;
+    color: var(--text-color);
 }
 
 #datosPost #selectCategoriaPost{
@@ -302,6 +358,16 @@ nav ul button{
     border: 1px solid #dbdbdb;
     border-radius: 5px;
     outline: none;
+    background-color: transparent;
+    color: var(--text-color);
+}
+
+#datosPost #selectCategoriaPost option{
+    background-color: var(--primary-color);
+}
+
+#datosPost #selectCategoriaPost option:hover{
+    background-color: var(--bg-color);
 }
 
 #datosPost #inputContenidoPost{
@@ -316,6 +382,7 @@ nav ul button{
     border-radius: 5px;
     margin-bottom: 30px;
     padding: 10px;
+    color: var(--text-color);
 }
 
 #datosPost #buttonPublicarPost{
