--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -55,23 +55,11 @@ header .containerBarSearch #barSearch{
     margin-right: 5px;
     border: var(--bg-color);
     background-color: var(--bg-color);
+    color: var(--text-color);
 }
 
 header .containerBarSearch #buttonSearch{
     background-color: transparent;
-    border: none;
-}
-
-
-header .containerOptionsUser{
-    margin-right: 25px;
-}
-
-
-header .containerOptionsUser #buttonUserOptions{
-    background-color: transparent;
-    border-color: var(--text-color);
-    margin-left: 10px;
     border: none;
 }
 
@@ -87,7 +75,6 @@ header .containerOptionsUser #buttonUserOptions{
 nav{
     display: flex;
     width: 100%;
-    height: 100%;
 }
 
 nav ul{
@@ -129,6 +116,50 @@ nav ul button{
     border: none;
 }
 
+.containerNavigation .containerOptionsUser{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.containerNavigation .containerOptionsUser #buttonPerfil:hover{
+    background-color: var(--bg-color);
+    border-radius: 40px;
+}
+
+.containerOptionsUser #buttonPerfil{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    width: 200px;
+    height: 50px;
+    background-color: transparent;
+    border: none;
+    padding: 15px 20px 15px 20px;
+}
+
+.containerOptionsUser #buttonPerfil p{
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 15px;
+}
+
+.containerNavigation .containerOptionsUser #buttonUserOptions{
+    background-color: transparent;
+    border-color: var(--text-color);
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+}
+
+.containerNavigation .containerOptionsUser #buttonUserOptions:hover{
+    background-color: var(--bg-color);
+    border-radius: 50px;
+}
+
 .containerPrincipal{
     display: flex;
     margin-top: 72px;
@@ -155,7 +186,10 @@ nav ul button{
     height: 48px;
     border: none;
     border-radius: 40px;
-    background-color: #ecebeb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg-color);
 }
 
 .containerContent .containerInputPost #buttonInputPost:hover{
@@ -187,18 +221,38 @@ nav ul button{
     margin-bottom: 2px;
 }
 
-.containerContent .post .ContainerPicturesNameUser{
+.containerContent .post .containerPicturesNameUserMore{
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-top: 10px;
+    justify-content: space-between;
 }
 
-.post .ContainerPicturesNameUser p{
+.post .containerPicturesNameUserMore .containerPicturesName{
+    display: flex;
+    align-items: center;
+}
+
+.post .containerPicturesNameUserMore p{
     font-size: 20px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-left: 15px;
     font-weight: bold;
+}
+
+.containerPicturesNameUserMore .containerMore #buttonMore{
+    height: auto;
+    width: auto;
+    background-color: transparent;
+    border-radius: 40px;
+    border: none;
+    padding: 10px;
+    color: var(--text-color);
+}
+
+.containerPicturesNameUserMore .containerMore #buttonMore:hover{
+    background-color: var(--bg-color);
 }
 
 .containerContent .post h3{
@@ -251,17 +305,24 @@ nav ul button{
 }
 
 #buttonLike:hover, #buttonDislike:hover, #buttonComment:hover{
-    background-color: #eeeeee;
+    background-color: var(--bg-color);;
 }
 
 #buttonLike, #buttonDislike{
     margin-right: 25px;
 }
 
+.containerProfile{
+    align-items: flex-start;
+    width: 69%;
+    min-width: 450px;
+}
+
 .containerTrendings{
     background-color: var(--primary-color);
     width: 34%;
-    height: 500px;
+    min-width: 250px;
+    min-height: 100%;
     align-items: flex-end;
     margin-left: 2px;
     padding: 25px;
@@ -366,10 +427,6 @@ nav ul button{
     background-color: var(--primary-color);
 }
 
-#datosPost #selectCategoriaPost option:hover{
-    background-color: var(--bg-color);
-}
-
 #datosPost #inputContenidoPost{
     background-color: transparent;
     resize: none;
@@ -449,6 +506,6 @@ nav ul button{
     display: none;
 }
 
-article, h1, h2, p{
+article, h1, h2, h3, p{
     color: var(--text-color);
 }
