--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -142,6 +142,7 @@ nav ul button{
     font-size: 20px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-left: 15px;
+    font-weight: bold;
 }
 
 .containerNavigation .containerOptionsUser #buttonUserOptions{
@@ -313,9 +314,70 @@ nav ul button{
 }
 
 .containerProfile{
-    align-items: flex-start;
+    display: flex;
+    flex-direction: column;;
     width: 69%;
     min-width: 450px;
+}
+
+.containerProfile .containerInformationUser{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--primary-color);
+    padding: 20px 20px 30px 20px;
+}
+
+.containerInformationUser .containerPicturesNamePseudonimo{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    
+}
+
+.containerPicturesNamePseudonimo .containerNamePseudonimo{
+    display: flex;
+    flex-direction: column;
+    margin-left: 30px;
+}
+
+.containerNamePseudonimo #nameUserProfile{
+    font-size: 40px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    margin: 0;
+}
+
+.containerNamePseudonimo #pseudonimoUserProfile{
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 10px;
+}
+
+#buttonEditarPerfil{
+    background-color: #ffe000;
+    width: 150px;
+    height: 40px;
+    border:0.5px black solid;
+    border-radius: 4px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.containerProfile .containerPostProfile{
+    background-color: var(--primary-color);
+    margin-top: 2px;
+}
+
+.containerPostProfile .containerTituloPublicaciones{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.containerTituloPublicaciones #tituloPublicaciones{
+    font-size: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .containerTrendings{
@@ -335,6 +397,84 @@ nav ul button{
 
 .containerTrendings p{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.pop-up-perfil{
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+
+.pop-up-wrap-perfil{
+    background-color: var(--primary-color);;
+    color: var(--text-color);
+    display: inline;
+    width: 600px;
+    height: 500px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    border: 1px #ffffff solid;
+}
+
+.pop-up-wrap-perfil .containerTituloyBotonCerrar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0px;
+}
+
+.pop-up-wrap-perfil .containerTituloyBotonCerrar p{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    margin-left: 220px;
+    margin-right: 165px;
+}
+
+.pop-up-wrap-perfil #datosPerfil{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.pop-up-wrap-perfil #datosPerfil div{
+    margin-bottom: 20px;
+}
+
+#inputPrimerNombrePerfil, #inputPrimerApellidoPerfil{
+    margin-right: 20px;
+}
+
+#buttonSubirCambios{
+    background-color: #fe0;
+    width: 120px;
+    height: 40px;
+    margin: 0px 0px 30px 0px;
+    border:0.5px black solid;
+    border-radius: 4px;
+    font-size: 20px;
+}
+
+.pop-up-wrap-perfil #datosPerfil div input{
+    font-size: 20px;
+    border: 1px solid #dbdbdb;
+    border-radius: 5px;
+    background-color: transparent;
+    height: 40px;
+    padding: 0 10px 0 10px;
+    width: 200px;
+    outline: none;
+    color: var(--text-color);
 }
 
 .pop-up {
@@ -363,7 +503,7 @@ nav ul button{
     border: 1px #ffffff solid;
 }
 
-.containerTituloyBotonCerrar{
+.pop-up-wrap .containerTituloyBotonCerrar{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -371,7 +511,7 @@ nav ul button{
     margin-top: 0px;
 }
 
-.containerTituloyBotonCerrar p{
+.pop-up-wrap .containerTituloyBotonCerrar p{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 25px;
     font-weight: bold;
@@ -379,7 +519,7 @@ nav ul button{
     margin-right: 130px;
 }
 
-.containerTituloyBotonCerrar #buttonCerrarModal{
+.pop-up-wrap .containerTituloyBotonCerrar #buttonCerrarModal, #buttonCerrarModalPerfil{
     display: flex;
     align-items: center;
     background-color: transparent;
@@ -387,7 +527,7 @@ nav ul button{
     border: none;
 }
 
-#datosPost{
+#datosPost, #datosPerfil{
     display: flex;
     align-items: center;
     flex-direction: column;
