--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -318,6 +318,7 @@ nav ul button{
     flex-direction: column;;
     width: 69%;
     min-width: 450px;
+    display: none;
 }
 
 .containerProfile .containerInformationUser{
@@ -331,8 +332,25 @@ nav ul button{
 .containerInformationUser .containerPicturesNamePseudonimo{
     display: flex;
     align-items: center;
-    flex-direction: row;
-    
+    flex-direction: row; 
+}
+
+.containerPicturesNamePseudonimo #buttonAddFoto{
+    border: 2px solid var(--text-color);
+    background-color: var(--primary-color);
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-left: -45px;
+}
+
+.containerPicturesNamePseudonimo #buttonAddFoto span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--text-color);
+    padding: 5px;
 }
 
 .containerPicturesNamePseudonimo .containerNamePseudonimo{
@@ -414,11 +432,11 @@ nav ul button{
 }
 
 .pop-up-wrap-perfil{
-    background-color: var(--primary-color);;
+    background-color: var(--primary-color);
     color: var(--text-color);
     display: inline;
     width: 600px;
-    height: 500px;
+    height: 400px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -451,20 +469,6 @@ nav ul button{
     margin-bottom: 20px;
 }
 
-#inputPrimerNombrePerfil, #inputPrimerApellidoPerfil{
-    margin-right: 20px;
-}
-
-#buttonSubirCambios{
-    background-color: #fe0;
-    width: 120px;
-    height: 40px;
-    margin: 0px 0px 30px 0px;
-    border:0.5px black solid;
-    border-radius: 4px;
-    font-size: 20px;
-}
-
 .pop-up-wrap-perfil #datosPerfil div input{
     font-size: 20px;
     border: 1px solid #dbdbdb;
@@ -475,6 +479,112 @@ nav ul button{
     width: 200px;
     outline: none;
     color: var(--text-color);
+}
+
+#datosPerfil #inputPrimerNombrePerfil, #datosPerfil #inputPrimerApellidoPerfil{
+    margin-right: 20px;
+}
+
+#datosPerfil #inputPseudonimoPerfil{
+    width: 446px;
+}
+
+#buttonSubirCambios, #buttonSubirCambiosImagen{
+    background-color: #fe0;
+    width: 120px;
+    height: 40px;
+    margin: 20px 0px 20px 0px;
+    border:0.5px black solid;
+    border-radius: 4px;
+    font-size: 20px;
+}
+
+.pop-up-imagen-perfil{
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+
+.pop-up-wrap-imagen-perfil{
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    display: inline;
+    width: 600px;
+    height: 500px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    border: 1px #ffffff solid;
+}
+
+.pop-up-wrap-imagen-perfil .containerTituloyBotonCerrar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0px;
+}
+
+.pop-up-wrap-imagen-perfil .containerTituloyBotonCerrar p{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    margin-left: 160px;
+    margin-right: 105px;
+}
+
+#datosImagenPerfil form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.contenedorInputFile{
+    border: 1px solid #dbdbdb;
+    border-radius: 5px;
+    background-color: transparent;
+    width: 220px;
+    height: 40px;
+    position: relative;
+    margin: 20px 0 24px 0;
+    padding: 0;
+}
+
+.contenedorInputFile p{
+    text-align: center;
+    font-size: 20px;
+    color: var(--text-color);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+    margin-top: 2px;
+}
+
+.contenedorInputFile #inputFoto{
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    margin: 0;
+    padding: 0;
+}
+
+#datosImagenPerfil #fotoPerfilEnModal{
+    border-radius: 50%;
+    border: 1px solid #dbdbdb;
 }
 
 .pop-up {
@@ -519,7 +629,7 @@ nav ul button{
     margin-right: 130px;
 }
 
-.pop-up-wrap .containerTituloyBotonCerrar #buttonCerrarModal, #buttonCerrarModalPerfil{
+.pop-up-wrap .containerTituloyBotonCerrar #buttonCerrarModal, #buttonCerrarModalPerfil, #buttonCerrarModalImagenPerfil{
     display: flex;
     align-items: center;
     background-color: transparent;
@@ -527,7 +637,7 @@ nav ul button{
     border: none;
 }
 
-#datosPost, #datosPerfil{
+#datosPost, #datosPerfil , #datosImagenPerfil{
     display: flex;
     align-items: center;
     flex-direction: column;
