seudonimo uinico en Base de Datos y en login

--- a/vista/styles/registro.css
+++ b/vista/styles/registro.css
@@ -51,12 +51,8 @@ div{
     margin-bottom: 20px;
 }
 
-#inputPrimerNombre, #inputPrimerApellido, #inputContraseña{
+#inputPrimerNombre, #inputPrimerApellido, #inputContraseña, #inputCorreoElectronico{
     margin-right: 20px;
-}
-
-#inputCorreoElectronico{
-    width: 450px;
 }
 
 #buttonSignUp{
