--- a/vista/styles/administrador.css
+++ b/vista/styles/administrador.css
@@ -72,7 +72,7 @@ nav ul button:hover{
     cursor: pointer;
 }
 
-nav ul button:focus{
+button:focus{
     outline: none;
 }
 
@@ -181,7 +181,7 @@ nav ul button{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 17px;
     color: var(--text-color);
-    background-color: transparent;
+    background-color: var(--primary-color);
     transition: all 100ms;
     border: 1px var(--text-color) solid;
 }
@@ -231,7 +231,7 @@ nav ul button{
     color: var(--text-color);
     display: inline;
     width: 500px;
-    height: 300px;
+    height: 370px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -243,10 +243,10 @@ nav ul button{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 0px;
+    margin-top: 20px;
 }
 
-.pop-up-wrap-cambiar-contraseña .containerTituloyBotonCerrar p{
+.pop-up-wrap-cambiar-contraseña .containerTituloyBotonCerrar h2{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 25px;
     font-weight: bold;
@@ -259,6 +259,7 @@ nav ul button{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 30px;
 }
 
 .datosCambiarContraseña input{
@@ -268,7 +269,7 @@ nav ul button{
     background-color: transparent;
     height: 40px;
     padding: 0 10px 0 10px;
-    width: 200px;
+    width: 240px;
     outline: none;
     color: var(--text-color);
     margin-bottom: 20px;
@@ -350,6 +351,9 @@ h2{
 
 .row input{
     background-color: transparent;
+}
+
+div.dataTables_wrapper div.dataTables_filter input {
     color: var(--text-color);
 }
 
