--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -2,6 +2,7 @@
     --primary-color: #ffffff;
     --bg-color: #eeeeee;
     --text-color: #000000;
+    --reaction-color:#606770;
 }
 
 body{
@@ -93,7 +94,6 @@ nav ul li{
 
 nav ul button:hover{
     background-color: var(--bg-color);
-    border-radius: 40px;
     cursor: pointer;
 }
 
@@ -115,6 +115,7 @@ nav ul button{
     justify-content: center;
     background-color: transparent;
     border: none;
+    border-radius: 40px;
 }
 
 .containerNavigation .containerOptionsUser{
@@ -126,7 +127,6 @@ nav ul button{
 
 .containerNavigation .containerOptionsUser #buttonPerfil:hover{
     background-color: var(--bg-color);
-    border-radius: 40px;
 }
 
 .containerOptionsUser #buttonPerfil{
@@ -138,6 +138,8 @@ nav ul button{
     background-color: transparent;
     border: none;
     padding: 15px 20px 15px 20px;
+    border: none;
+    border-radius: 40px;
 }
 
 #buttonPerfil img{
@@ -421,7 +423,7 @@ nav ul button{
 
 .containerContent .post{
     background-color: var(--primary-color);
-    padding: 1px 20px 20px 20px;
+    padding: 1px 20px 0px 20px;
     margin-bottom: 2px;
 }
 
@@ -490,7 +492,9 @@ nav ul button{
 
 .post .containerReactionComment{
     margin-top: 20px;
-    /*border: 2px solid #dbdbdb;*/
+    padding-bottom: 5px;
+    padding-top: 5px;
+    border-top: 1px solid var(--bg-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -499,33 +503,113 @@ nav ul button{
 
 }
 
-.containerLike p, .containerDislike p{
+.containerLike p, .containerDislike p , .containerComment P{
     font-size: 17px;
     margin-left: 5px;
+    font-weight: bold;
+    color: var(--reaction-color);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#buttonLike, #buttonDislike{
+.containerLike button, .containerDislike button, .containerComment button{
     display: flex;
     flex-direction: row;
     align-items: center;
     padding: 0px 20px 0px 20px;
-    border-radius: 20px;
+    border-radius: 5px;
     height: 40px;
     background-color: transparent;
     border: none;
 }
 
-#buttonLike:hover, #buttonDislike:hover{
+.containerLike button:hover, .containerDislike button:hover, .containerComment button:hover{
     background-color: var(--bg-color);;
 }
 
-#buttonLike, #buttonDislike{
+.containerLike button, .containerDislike button{
     margin-right: 25px;
 }
 
-#buttonLike span, #buttonDislike span{
+.containerLike button span, .containerDislike button span, .containerComment button span{
+    color: var(--reaction-color);
+}
+
+.containerInputComment{
+    display: flex;
+    margin-top: 0px;
+    align-items: flex-start;
+    flex-direction: row;
+    border-top: 1px solid var(--bg-color);
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+
+.containerInputComment img{
+    margin-right: 20px;
+}
+
+.containerInputComment input{
+    height: 45px;
+    width: 100%;
+    padding-left: 10px;
+    overflow-x: visible;
+    background-color: var(--bg-color);
     color: var(--text-color);
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    margin-right: 10px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+
+}
+
+.containerInputComment button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--bg-color);
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    border: none;
+}
+
+.containerInputComment button span{
+    color: var(--reaction-color);
+}
+
+
+.containerButtonMoreComment{
+    display: flex;
+    justify-content: center;
+    padding-top: 5px;
+    padding-bottom: 8px;
+}
+
+.containerButtonMoreComment button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--bg-color);
+    width: 250px;
+    height: 45px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.containerButtonMoreComment p {
+    font-size: 17px;
+    margin-left: 5px;
+    font-weight: bold;
+    color: var(--reaction-color);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.containerButtonMoreComment button span{
+    color: var(--reaction-color);
+
 }
 
 .containerProfile{
