--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -579,6 +579,51 @@ nav ul button{
     color: var(--reaction-color);
 }
 
+.containerShowComment{
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+}
+
+.comentario{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--primary-color);
+    border-top: 1px var(--bg-color) solid;
+}
+
+.comentario .infoUser{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: start;
+    margin-bottom: 0;
+}
+
+.comentario .infoUser img{
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.comentario .infoUser p{
+    font-size: 20px;
+    color: var(--text-color);
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.comentario .contenidoComment{
+    margin-top: -10px;
+    word-break: break-all;
+    padding-bottom: 0;
+}
+
+.comentario .contenidoComment p{
+    font-size: 22px;
+    color: var(--text-color);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 
 .containerButtonMoreComment{
     display: flex;
